Fix CORS wildcard vulnerability with origin whitelisting

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,8 @@ ENVIRONMENT=development
 LOG_LEVEL=info
 LOG_FORMAT=json
 LOG_SOURCE=false
+
+# CORS - Comma-separated list of allowed origins (REQUIRED for security)
+# For local development with Traefik: https://localhost:8443
+# For production: https://admin.yourdomain.com
+ALLOWED_ORIGINS=https://localhost:8443
