Add httpOnly cookie authentication
- Store JWT tokens in httpOnly cookies to prevent XSS attacks
- Create cookie helper with domain/secure/samesite configuration
- Update login/logout/refresh handlers to use cookies
- Remove tokens from response body for security

--- a/.env.example
+++ b/.env.example
@@ -1,40 +1,130 @@
-# Database
-# For local development: localhost
-# For Docker: postgres
+# ============================================================================
+# AUTH SERVICE ENVIRONMENT VARIABLES
+# ============================================================================
+# Copy this file to .env and update values for your environment.
+# See README.md for usage instructions.
+# ============================================================================
+
+# ============================================================================
+# DATABASE CONFIGURATION
+# ============================================================================
+# DB_HOST: PostgreSQL server hostname
+#   - localhost: Local development without Docker
+#   - postgres: Docker Compose environment
 DB_HOST=localhost
+
+# DB_PORT: PostgreSQL server port (default: 5432)
 DB_PORT=5432
+
+# DB_USER: PostgreSQL user for runtime operations (CRUD)
+# Uses portfolio_admin role with DML rights, not DDL
 DB_USER=portfolio_admin
+
+# DB_PASSWORD: Password for DB_USER
+# IMPORTANT: Use strong passwords in production (32+ chars, mixed case, numbers, symbols)
 DB_PASSWORD=portfolio_admin_dev_pass
+
+# DB_NAME: Target database name
 DB_NAME=portfolio
-# SSL Mode: disable (local), require (AWS RDS), verify-ca, verify-full
-# Valid values: disable, allow, prefer, require, verify-ca, verify-full
+
+# DB_SSLMODE: PostgreSQL SSL/TLS mode
+#   - disable: No SSL (local development only)
+#   - require: SSL required (AWS RDS, production)
+#   - verify-ca: SSL with CA verification
+#   - verify-full: SSL with full certificate verification
 DB_SSLMODE=disable
 
-# Redis
-# For local development: localhost
-# For Docker: redis
+# ============================================================================
+# REDIS CONFIGURATION
+# ============================================================================
+# REDIS_HOST: Redis server hostname
+#   - localhost: Local development without Docker
+#   - redis: Docker Compose environment
 REDIS_HOST=localhost
+
+# REDIS_PORT: Redis server port (default: 6379)
 REDIS_PORT=6379
-# Redis password (optional - leave empty for no authentication)
-# IMPORTANT: Use strong passwords in production
+
+# REDIS_PASSWORD: Redis AUTH password
+# Leave empty for no authentication (development only)
+# IMPORTANT: Required in production with TLS enabled
 REDIS_PASSWORD=
 
-# JWT
+# ============================================================================
+# JWT CONFIGURATION
+# ============================================================================
+# JWT_SECRET: Secret key for signing JWT tokens (REQUIRED)
+# IMPORTANT: Generate a secure random string (64+ chars) for production
+# Example: openssl rand -base64 48
 JWT_SECRET=your-secret-key-change-in-production
+
+# JWT_ACCESS_EXPIRY: Access token lifetime (e.g., 15m, 1h)
+# Shorter = more secure, more refresh calls
 JWT_ACCESS_EXPIRY=15m
+
+# JWT_REFRESH_EXPIRY: Refresh token lifetime (e.g., 168h = 7 days)
+# Determines how long users stay logged in without re-authentication
 JWT_REFRESH_EXPIRY=168h
 
-# Server
+# ============================================================================
+# COOKIE CONFIGURATION (httpOnly auth tokens)
+# ============================================================================
+# Tokens are stored in httpOnly cookies to prevent XSS attacks.
+# Browsers automatically send cookies with requests.
+
+# COOKIE_DOMAIN: Cookie domain scope
+#   - Empty ("") for localhost development
+#   - ".yourdomain.com" for production (note leading dot for subdomains)
+COOKIE_DOMAIN=
+
+# COOKIE_SECURE: Restrict cookies to HTTPS only
+#   - false: Allow HTTP (development)
+#   - true: HTTPS only (production, REQUIRED)
+COOKIE_SECURE=false
+
+# COOKIE_SAMESITE: Cross-site request cookie policy
+#   - Lax: Allows cookies on top-level navigations (development)
+#   - Strict: Only same-site requests (production, most secure)
+#   - None: Allow cross-site (requires COOKIE_SECURE=true)
+COOKIE_SAMESITE=Lax
+
+# ============================================================================
+# SERVER CONFIGURATION
+# ============================================================================
+# PORT: HTTP server port
 PORT=8084
-# Environment: development, staging, or production
+
+# ENVIRONMENT: Deployment environment
+#   - development: Verbose logging, debug features
+#   - staging: Production-like with extra logging
+#   - production: Minimal logging, optimized performance
 ENVIRONMENT=development
 
-# Logging
+# ============================================================================
+# LOGGING CONFIGURATION
+# ============================================================================
+# LOG_LEVEL: Minimum log level
+#   - debug: All logs including debug messages
+#   - info: Informational messages and above
+#   - warn: Warnings and errors only
+#   - error: Errors only
 LOG_LEVEL=info
+
+# LOG_FORMAT: Log output format
+#   - json: Structured JSON (production, log aggregation)
+#   - text: Human-readable (development)
 LOG_FORMAT=json
+
+# LOG_SOURCE: Include source file:line in logs
+#   - true: Include (development debugging)
+#   - false: Exclude (production)
 LOG_SOURCE=false
 
-# CORS - Comma-separated list of allowed origins (REQUIRED for security)
-# For local development with Traefik: https://localhost:8443
-# For production: https://admin.yourdomain.com
+# ============================================================================
+# CORS CONFIGURATION
+# ============================================================================
+# ALLOWED_ORIGINS: Comma-separated list of allowed CORS origins (REQUIRED)
+# Must include the admin-web frontend URL
+#   - Development: https://localhost:8443 (Traefik HTTPS)
+#   - Production: https://admin.yourdomain.com
 ALLOWED_ORIGINS=https://localhost:8443
